header spacing fix

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -202,7 +202,7 @@ header#sidemenu {
     color: #444;
 }
 .user-details {
-    padding: 15px 20px;
+    padding: 20px;
 
 }
 span.user-icon {
